--- a/crown-clothing/src/components/product-card/product-card.styles.scss
+++ b/crown-clothing/src/components/product-card/product-card.styles.scss
@@ -40,12 +40,13 @@
     font-size: 18px;
 
     .name {
-      width: 90%;
+      width: 100%;
       margin-bottom: 15px;
     }
 
     .price {
-      width: 10%;
+      text-align: right;
+      width: 20%;
     }
   }
 }
