--- a/crown-clothing/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/crown-clothing/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,7 +1,7 @@
 .cart-dropdown-container {
   position: absolute;
-  width: 240px;
-  height: 340px;
+  width: auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -21,6 +21,8 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
+    overflow-x: hidden;
+    // overflow: hidden;
   }
 
   button {
