added categories routes, modified scss with my own

--- a/crown-clothing/src/routes/category/category.styles.scss
+++ b/crown-clothing/src/routes/category/category.styles.scss
@@ -1,5 +1,11 @@
-.products-container {
-  padding: 5rem 0;
+.category-title {
+  font-size: 38px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.category-container {
+  padding: 2rem 0;
   width: 90vw;
   margin: 0 auto;
   display: grid;
@@ -9,21 +15,21 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .products-container {
+  .category-container {
     width: 95vw;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 @media screen and (max-width: 800px) {
-  .products-container {
+  .category-container {
     width: 95vw;
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .products-container {
+  .category-container {
     width: 95vw;
     grid-template-columns: 1fr;
   }
